--- a/src/views/header/Header.module.scss
+++ b/src/views/header/Header.module.scss
@@ -29,6 +29,11 @@
     display: flex;
     align-items: center;
     width: fit-content;
+    gap: .5rem;
+}
+
+.logoIcon{
+        height: 2rem;
 }
 
 .city {
